[gd_scene load_steps=4 format=3 uid="uid://bc63j4a5iwm1n"]

[ext_resource type="Script" path="res://player.gd" id="1_ue3hx"]
[ext_resource type="Texture2D" uid="uid://xipu6dwkhm56" path="res://SkipOvenfra.png" id="2_1sal4"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0kevf"]

[node name="CharacterBody2D" type="CharacterBody2D" groups=["ship"]]
script = ExtResource("1_ue3hx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -1.5708
shape = SubResource("CapsuleShape2D_0kevf")

[node name="TextLose" type="TextEdit" parent="."]
visible = false
offset_left = -140.0
offset_top = -289.0
offset_right = 147.0
offset_bottom = -206.0
theme_override_font_sizes/font_size = 50
text = "Game Over"
editable = false

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2, -2)
rotation = 1.5708
scale = Vector2(1.3, 1.3)
texture = ExtResource("2_1sal4")

[node name="TextWin" type="TextEdit" parent="."]
visible = false
offset_left = -140.0
offset_top = -289.0
offset_right = 147.0
offset_bottom = -206.0
theme_override_font_sizes/font_size = 50
text = "YOU WIN!!!"

[node name="RestartButton" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
text = "Click to restart"

[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
